--- a/sound-c.html
+++ b/sound-c.html
@@ -24,7 +24,7 @@
 
 		<div class="mx-auto col-sm-4 col-sm-offset-4">
 			<audio controls style="width: 100%; max-width: 600px;">
-				<source src="resources/ouch.mp3" />
+				<source src="resources/teeth.mp3" />
 			</audio>
 		</div>
 
