--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="container">
             <div class="row justify-content-md-center text-center">
                 <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                           <div class="card">
                             <div class="card-body">
                               <h5 class="card-title">Blue Cards</h5>
@@ -29,7 +29,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                           <div class="card">
                             <div class="card-body">
                               <h5 class="card-title">Orange Cards</h5>
@@ -38,7 +38,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                                 <div class="card">
                                   <div class="card-body">
                                     <h5 class="card-title">Green Cards</h5>
