--- a/sound-a.html
+++ b/sound-a.html
@@ -36,6 +36,14 @@
       </audio>
     </figure>
 
+    <figure>
+      <figcaption>Listen to the T-Rex:</figcaption>
+      <audio controls src="/media/examples/t-rex-roar.mp3">
+        Your browser does not support the
+        <code>audio</code> element.
+      </audio>
+    </figure>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
