--- a/sound-a.html
+++ b/sound-a.html
@@ -37,8 +37,8 @@
     </figure>
 
     <figure>
-      <figcaption>Listen to the T-Rex:</figcaption>
-      <audio controls src="/media/examples/t-rex-roar.mp3">
+      <figcaption>Listen to the following phrase:</figcaption>
+      <audio controls src="/resources/ouch.mp3">
         Your browser does not support the
         <code>audio</code> element.
       </audio>
