--- a/sound-a.html
+++ b/sound-a.html
@@ -3,6 +3,10 @@
   <head>
     <title>Sound</title>
     <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -36,13 +40,10 @@
       </audio>
     </figure>
 
-    <figure>
-      <figcaption>Listen to the following phrase:</figcaption>
-      <audio controls src="/resources/ouch.mp3">
-        Your browser does not support the
-        <code>audio</code> element.
-      </audio>
-    </figure>
+    <audio controls src="/resources/ouch.mp3">
+      Your browser does not support the
+      <code>audio</code> element.
+    </audio>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
