--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 	<head>
 		<title>Learning to Listen</title>
-		<meta charset="utf-8" />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 		<link
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
