--- a/sound.html
+++ b/sound.html
@@ -11,7 +11,7 @@
   <body>
     <figure>
       <figcaption>Listen to the T-Rex:</figcaption>
-      <audio controls src="/media/examples/t-rex-roar.mp3">
+      <audio controls src="/resources/ouch.mp3">
         Your browser does not support the
         <code>audio</code> element.
       </audio>
