--- a/sound.html
+++ b/sound.html
@@ -16,5 +16,14 @@
         <code>audio</code> element.
       </audio>
     </figure>
+
+    <audio controls>
+      <source src="/resources/ouch.mp3" type="audio/mpeg" />
+      <source src="/resources/ouch.m4a" type="audio/aac" />
+      <p>
+        Your browser doesn't support HTML5 audio. Here is a
+        <a href="/resources/ouch.mp3">link to the audio</a> instead.
+      </p>
+    </audio>
   </body>
 </html>
