--- a/sound.html
+++ b/sound.html
@@ -19,11 +19,15 @@
 
     <audio controls>
       <source src="/resources/ouch.mp3" type="audio/mpeg" />
-      <source src="/resources/ouch.m4a" type="audio/aac" />
+      <source src="/resources/ouch.m4a" type="audio/mpeg" />
       <p>
         Your browser doesn't support HTML5 audio. Here is a
         <a href="/resources/ouch.mp3">link to the audio</a> instead.
       </p>
     </audio>
+    <p>
+      Your browser doesn't support HTML5 audio. Here is a
+      <a href="/resources/ouch.mp3">link to the audio</a> instead.
+    </p>
   </body>
 </html>
