--- a/sound-a.html
+++ b/sound-a.html
@@ -26,6 +26,12 @@
       </div>
     </div>
 
+    <div class="mx-auto col-sm-4 col-sm-offset-4">
+      <audio controls style="width: 100%; max-width: 600px;">
+        <source src="resources/ouch.mp3" />
+      </audio>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
