--- a/sound-a.html
+++ b/sound-a.html
@@ -26,8 +26,8 @@
       </div>
     </div>
 
-    <div class="mx-auto col-sm-4 col-sm-offset-4">
-      <audio controls style="width: 100%; max-width: 600px;">
+    <div class="container mx-auto text-center">
+      <audio controls>
         <source src="resources/ouch.mp3" />
       </audio>
     </div>
